CHANGELOG


1.5.0-beta1
* 6.1 'rule-type' support (universal,intrazone,interzone) implemented. See SecurityRule->type() for details.
* support for 7.0 new Security rules actions : drop, reset-client, reset-server, reset-both
* moved preRules and postRules into one single store (see getPreRules and getPostRules)
* new utility : rule-merger.php to find similar rules and merge them

* util rule-edit : service-edit and address-edit will auto-detect PANOS vs Panorama, no need to use argument 'type' anymore
* util rule-edit : new filters :  src/dst 'included-in.full included-in.partial included-in.full.or.partial' and 'includes.full includes-full.or.partial includes.partial'
* util rule-edit : new filters for app 'has' and 'has.nocase'
* util service-edit and address-edit new actions: replaceByMembersAndDelete, showIP4Mapping
* util upload-config : now supports inject xml parts direct in candidate config (see 'toXpath' option)
* util upload-config : you can now preserve target firewall config (like its mgmt ip for example, look for 'help' to see options available).
* util upload-config : now supports api://x.x.x.x/running-config candidate-config to choose between running and candidate or already saved file

* enhanced support of interfaces : you can extract more infos from them like IP addresses attached to them (see doc for all options available)
* virtual-wire and aggregate-group ethernet interface support


---------

1.2.6
* introduction of new 'utils' upload-config.php script that allows you send a config to a device or save a config from a device or bridge a config from a device to another.
* introduction of Exception support for programs that don't want to quit when an error occurs. use PH::enableExceptionSupport() any time for that
* IOMethods now support optional filename : out=api://192.168.50.10/stage2.xml
* new filter for rule-edit utility: rule is.disabled
* elementToPanXPath() helper to print xpath the way PANOS uses it

1.2.4