@@ -111,6 +111,9 @@ require_once dirname(__FILE__).'/'."class-VirtualSystem.php";
 require_once dirname(__FILE__).'/'."class-PANConf.php";
 require_once dirname(__FILE__).'/'."class-PanoramaConf.php";
 require_once dirname(__FILE__).'/'."class-DeviceGroup.php";
+require_once dirname(__FILE__).'/network-classes/'."class-StaticRoute.php";
+require_once dirname(__FILE__).'/network-classes/'."class-VirtualRouter.php";
+require_once dirname(__FILE__).'/network-classes/'."class-VirtualRouterStore.php";
 require_once dirname(__FILE__).'/network-classes/'."class-NetworkPropertiesContainer.php";
 require_once dirname(__FILE__).'/network-classes/'."class-IPsecTunnelStore.php";
 require_once dirname(__FILE__).'/network-classes/'."class-IPsecTunnel.php";
